--- a/defualt.tex
+++ b/defualt.tex
@@ -202,6 +202,10 @@ Blockchain ensures immutability and transparency by keeping a decentralized ledg
 % Include actual chapters
 \IfFileExists{content/chapter_1.tex}{\input{content/chapter_1}}{\par\medskip\noindent\textit{content/chapter_1.tex missing.}\par\medskip}
 \IfFileExists{content/chapter_2.tex}{\input{content/chapter_2}}{\par\medskip\noindent\textit{content/chapter_2.tex missing.}\par\medskip}
+\IfFileExists{content/chapter_3.tex}{\input{content/chapter_3}}{\par\medskip\noindent\textit{content/chapter_3.tex missing.}\par\medskip}
+\IfFileExists{content/chapter_4.tex}{\input{content/chapter_4}}{\par\medskip\noindent\textit{content/chapter_4.tex missing.}\par\medskip}
+\IfFileExists{content/chapter_5.tex}{\input{content/chapter_5}}{\par\medskip\noindent\textit{content/chapter_5.tex missing.}\par\medskip}
+
 % ... add more chapters as needed ...
 
 % Appendices
